# concise-args

./: CMakeLists.txt  ConciseArgs.hpp  Makefile  ProjectHome.md
test/: CMakeLists.txt  concise-args-simple-test.cpp  concise-args-test.cpp
